# tron

./: .gitignore  CMakeLists.txt  README.md  Set-Env.ps1  TODO.md  generate.ps1  junk.txt  osgviewer.ps1  reset_third_party.ps1  setup.ps1
qtbase/include/QtCore/: qabstractanimation.h  qabstracteventdispatcher.h  qabstractitemmodel.h  qabstractnativeeventfilter.h  qabstractproxymodel.h  qanimationgroup.h  qbasictimer.h  qbuffer.h  qcompilerdetection.h  qconcatenatetablesproxymodel.h  qconfig-bootstrapped.h  qcoreapplication.h  qcoreevent.h  qdeadlinetimer.h  qdebug.h  qdir.h  qdiriterator.h  qelapsedtimer.h  qendian.h  qeventloop.h  qfactoryinterface.h  qfile.h  qfiledevice.h  qfileinfo.h  qfileselector.h  qfilesystemwatcher.h  qflags.h  qfloat16.h  qfunctions_nacl.h  qfunctions_vxworks.h  qfunctions_winrt.h  qglobal.h  qglobalstatic.h  qidentityproxymodel.h  qiodevice.h  qisenum.h  qitemselectionmodel.h  qlibrary.h  qlibraryinfo.h  qlockfile.h  (+55 more)
qtbase/include/QtCore/5.15.0/QtCore/private/: cp949codetbl_p.h  minimum-linux_p.h  qabstractanimation_p.h  qabstracteventdispatcher_p.h  qabstractfileengine_p.h  qabstractitemmodel_p.h  qabstractproxymodel_p.h  qanimationgroup_p.h  qbig5codec_p.h  qcfsocketnotifier_p.h  qcore_mac_p.h  qcore_unix_p.h  qcoreapplication_p.h  qcorecmdlineargs_p.h  qcoreglobaldata_p.h  qdataurl_p.h  qdeadlinetimer_p.h  qdebug_p.h  qdir_p.h  qelfparser_p.h  qendian_p.h  qeucjpcodec_p.h  qeuckrcodec_p.h  qeventdispatcher_cf_p.h  qeventdispatcher_glib_p.h  qeventdispatcher_unix_p.h  qeventdispatcher_win_p.h  qeventdispatcher_winrt_p.h  qeventloop_p.h  qfactoryloader_p.h  qfile_p.h  qfiledevice_p.h  qfileinfo_p.h  qfileselector_p.h  qfilesystemengine_p.h  qfilesystementry_p.h  qfilesystemiterator_p.h  qfilesystemmetadata_p.h  qfilesystemwatcher_fsevents_p.h  qfilesystemwatcher_inotify_p.h  (+86 more)
resources/test/heightmap/: heightmap-16bit-gray-half.dds  heightmap-16bit-gray.dds  heightmap-8bit-gray.dds  heightmap-bc1.dds  heightmap-bc2.dds  heightmap-bc3.dds
resources/test/mipmap/: mipmap_alpha_test-11_levels-bc1.dds  mipmap_alpha_test-11_levels-bc1_srgb.dds  mipmap_alpha_test-11_levels-bc2.dds  mipmap_alpha_test-11_levels-bc2_srgb.dds  mipmap_alpha_test-11_levels-bc3.dds  mipmap_alpha_test-11_levels-bc3_srgb.dds  mipmap_level_test-11_levels-bc1.dds  mipmap_level_test-11_levels-bc1_srgb.dds  mipmap_level_test-11_levels-bc2.dds  mipmap_level_test-11_levels-bc2_srgb.dds  mipmap_level_test-11_levels-bc3.dds  mipmap_level_test-11_levels-bc3_srgb.dds
scripts/: apply_environment_file.ps1  argoverse2_to_osgb.ps1  configure_cmake.ps1  reset_third_party.ps1  setup.ps1  setup_build_environment.ps1  setup_environment_file.ps1  setup_prerequisites.ps1  setup_third_party.ps1
src/cmake/custom_triplets/: custom-linux.cmake  custom-windows.cmake  x64-linux.cmake  x64-osx.cmake  x64-windows.cmake
src/custom_vcpkg/ports/osg/: portfile.cmake
src/custom_vcpkg/triplets/: x64-linux.cmake  x64-osx.cmake  x64-windows.cmake
src/generate_quadtree_textures/: CMakeLists.txt
src/hello/hello_cmake/: CMakeLists.txt  hello_cmake.cpp
src/hello/hello_dynamic_lib/: BUILD  helper.cc  helper.hh  main.cc  main2.cc  other.cc  other.hh
src/hello/hello_local_repo/dll/: BUILD  helper.cc
src/hello/hello_local_repo/exe/: BUILD  BUILD.helper  WORKSPACE  build_dbg_bin.sh  main.cc
src/hello/hello_osg/: .gitignore  CMakeLists.txt  hello_osg.cpp
src/hello/hello_osg_terrain_tile/: CMakeLists.txt  hello_osg_terrain_tile.cpp
src/hello/hello_osg_textured_quad/: CMakeLists.txt  hello_osg_textured_quad.cpp
src/hello/hello_qt/: CMakeLists.txt
src/osgbillboard/: CMakeLists.txt  osgbillboard.cpp
src/osgterrain/: CMakeLists.txt  osgterrain.cpp
src/osgthreadedterrain/: CMakeLists.txt  osgthreadedterrain.cpp
src/sandbox/QTreeView/: CMakeLists.txt  Darcula.qss  Darcula_SimGUI_Merged.qss  QTreeView.cpp
src/sandbox/QTreeView/Assets/: Darcula_SimGUI.qss  Darcula_SimGUI_Merged.qss
src/sandbox/QTreeView_app/: CMakeLists.txt  QTreeView_app.cpp
src/sandbox/hello_cmake/: CMakeLists.txt  hello_cmake.cpp  hello_cmake.h
src/sandbox/hello_osg/: CMakeLists.txt  hello_osg.cpp
src/sandbox/hello_qt/: CMakeLists.txt  hello_qt.cpp
src/sandbox/maptiles/: CMakeLists.txt  main.cc
src/sandbox/parseJson/: CMakeLists.txt  parseJson.cpp  simulation_config.json  simulation_config_2in1.json
src/sandbox/parseJson/Assets/: simulation_config-all_cmds.json
src/sandbox/parseJson_app/: CMakeLists.txt  parseJson_app.cpp
src/test_json_to_osgb/: CMakeLists.txt  test_json_to_osgb.cpp
src/vector_map/: CMakeLists.txt  vector_map.cpp
