# CMakeList.txt : CMake project for hello_cmake, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (hello_cmake "hello_cmake.cpp" "hello_cmake.h")

# TODO: Add tests and install targets if needed.

